Fixup changes to complant object versioning; and button text on Safari

--- a/app/frontend/web/static/serfr.css
+++ b/app/frontend/web/static/serfr.css
@@ -35,6 +35,7 @@
 
 input.button{
     background-color: #ffd0d0;
+    color: #000000;
     padding:6px 12px;
     font-size: 1.3em;
     display:inline-block;
@@ -67,6 +68,7 @@ input.button-clicked{
     margin:0.8em;
     margin-top:0em;
     background-color: #d0ffd0;
+    color: #000000;
 }
 #changebutton{ background-color: #d0ffd0 }
 
